tests/files/type_checker_tests/should_pass/026.cmdr
//Test bindings type check
x: (int, int) -> int = fn (a: int, b: int): int -> a + b;
y = x;
