tests/files/type_checker_tests/should_fail/069.cmdr
//Should fail if return bindings don't match return type
foo = fn (x: int, y: float): bool -> {
    println x + y;
};
